[package]
name = "epub-download"
version = "0.1.0"
authors = ["banjiaojuhao <banjiaojuhao@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-leveldb = "0.3.5"
reqwest = { version = "0.10", features = ["blocking", "gzip"] }
bytes = "0.5.6"
quick-xml = "0.18.1"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
